# batmon

./: .clang-format  .gitignore  README.md  docker-run.sh
batmon/: CMakeLists.txt  partitions.csv  partitions_littlefs.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
batmon/main/: CMakeLists.txt  Makefile  batmon_littlefs.c  batmon_littlefs.h  batmon_main.c  batmon_wifi.c  batmon_wifi.h  hardware.c  hardware.h  log.h  mb_crc.c  mb_crc.h  nvm_esp.c  nvm_esp.h  rest_server.c  rest_server.h  sdcard.c  sdcard.h  sdlog.c  sdlog.h  sntp_client.c  sntp_client.h  storage.c  storage.h  test  test.c  tinbus.c  tinbus.h
file_serving/: sdkconfig  sdkconfig.old
partition_find/: partitions.csv  sdkconfig  sdkconfig.old
partition_find/main/: CMakeLists.txt  Makefile  all  log.h  main.c  nvm.h  nvm_esp.c  nvm_esp.h  nvm_file.c  nvm_file.h  storage.c  storage.h  test  test.c
